--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
 
     <application
         android:allowBackup="true"
@@ -16,8 +16,9 @@
         android:theme="@style/Theme.AppSuperHero"
         tools:targetApi="31" >
         <activity
-            android:name=".activities.MainActivity"
-            android:exported="true" >
+            android:name="com.example.appsuperhero.activities.MainActivity"
+            android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
